--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div data-aos="fade-right">
                     <h2 class="text-3xl font-bold text-brand-dark mb-6">Tại sao P-Career ra đời?</h2>
                     <p class="text-slate-600 mb-4 leading-relaxed">
-                        Thị trường lao động năm 2025 đòi hỏi nhân sự chất lượng cao không chỉ giỏi chuyên môn mà còn phải thành thạo ngoại ngữ. Tuy nhiên, nghịch lý là sinh viên ra trường có bằng cấp nhưng lại thiếu **"Tiếng Anh thực chiến"**.
+                        Thị trường lao động năm 2025 đòi hỏi nhân sự chất lượng cao không chỉ giỏi chuyên môn mà còn phải thành thạo ngoại ngữ. Tuy nhiên, nghịch lý là sinh viên ra trường có bằng cấp nhưng lại thiếu "Tiếng Anh thực chiến".
                     </p>
                     <div class="space-y-4 mt-6">
                         <div class="flex items-start">
